# ComputerGraphics

./: .clang-format  .gitignore
Assigment1/: CMakeLists.txt  main.cpp
Assigment1/shapes/: shape.hpp
Assigment2/: main.cpp
Assigment3/: CMakeLists.txt
Assigment3/shapes/: cube.cpp  cube.hpp  sphere.cpp  sphere.hpp
